<resources>
    <string name="app_name">321Connect</string>
    <string name="feed">Feed</string>
    <string name="activity">Activity</string>
    <string name="sleep">Sleep</string>
    <string name="mood">Behavior</string>
    <string name="resources">Resources</string>
    <string name="medical">Medical</string>
    <string name="message">Message</string>
    <string name="milestone">Development</string>
    <string name="sign_in_out">Sign in/out</string>
    <string name="photo">Photo</string>
    <string name="dairy">Journal</string>
    <string name="more">Medication</string>
    <string name="measured_height">Measured Height</string>
    <string name="measured_weight">Measured Weight</string>
    <string name="head_size">Head Size</string>
    <string name="health">Health</string>
    <string name="vaccine">Vaccinations</string>
    <string name="dosage">Dosage</string>
    <string name="doctor_s_visit">Doctor Visit</string>
    <string name="temperature">Temperature</string>
    <string name="notes">Notes:</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="bottle">Bottle</string>
    <string name="nursing">Nursing</string>
    <string name="solids">Solids</string>
    <string name="weight">Weight</string>
    <string name="profiles">Profiles</string>
    <string name="parents_caregivers">Parents/Caregivers</string>
    <string name="your_children">Your Children(Click name to select child)</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="due_date">Due Date</string>
    <string name="allergies">Allergies</string>
    <string name="medications">Medications</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="history">History</string>
    <string name="graphs">Graphs</string>
    <string name="timeline">Timeline</string>
    <string name="mail">Mail</string>
    <string name="synced">Synced @</string>
    <string name="recent_entries">Recent Entries</string>
    <string name="summary">Summary</string>
    <string name="diary">Journal</string>
    <string name="woke_up">Woke up</string>
    <string name="went_to_sleep">Went to sleep</string>
    <string name="enter_birthday">Enter Birthday</string>
    <string name="enter_due_date">Enter Due Date</string>
    <string name="entries">Entries</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bathroom">Bathroom</string>
    <string name="diaper">Diaper</string>
    <string name="potty">Potty</string>
    <string name="constipation">Constipation</string>
    <string name="profileBabyName">First &amp; Last Name</string>
    <string name="phone_list">Phone List</string>
    <string name="profile_status">Profile Status</string>
    <string name="plus">+</string>
    <string name="parent_description">Each caregiver will be able to view and save entries</string>
    <string name="phone_description">This phone list will be visible by each caregiver</string>
    <string name="inactive_profiles_are_hidden_on_your_homepage">Inactive profiles are hidden on your homepage</string>
    <string name="delete">Delete</string>
    <string name="accident">Accident</string>
    <string name="duration">Duration:</string>
    <string name="diaper_cream">Diaper Cream</string>
    <string name="quantity">Quantity</string>
    <string name="enter_date">Enter Date</string>
    <string name="treatment_plan">Treatment Plan</string>
    <string name="enter_time">Enter Time</string>
    <string name="amount_of_fluid">Amount of Fluid</string>
    <string name="enter_appointment_date">Enter Appointment Date</string>
    <string name="ate">Food Consumed</string>
    <string name="mode_of_eating">Mode of Drinking/Intake</string>
    <string name="mode_of_feeding">Mode of Feeding</string>
    <string name="vitamin">Please list any vitamins or supplements given with this feeding:</string>
    <string name="iron">Iron</string>
    <string name="multivitamin">Multivitamin</string>
    <string name="add_photo">Add Photo</string>
    <string name="cpap">CPAP</string>
    <string name="other">Other</string>
    <string name="please_indicate">Please indicate:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="supplements_ex_melatonin">Supplements (ex: Melatonin)</string>
    <string name="medication_detailed_in_medicine_area">Medication (detailed in Medicine area)</string>
    <string name="did_the_child_have_a_sleep_study_conducted_before_age_4">Did the child have a sleep study conducted before age 4?</string>
    <string name="check_all_that_apply">Check all that apply.</string>
    <string name="does_the_child_use_any_sleep_treatments">Does the child use any sleep treatments?</string>
    <string name="additional_information">Provider Reports</string>
    <string name="tap_to_set"><![CDATA[<tap to set>]]></string>
    <string name="until">Until:</string>
    <string name="national_support_groups">National Support Groups</string>
    <string name="websites">Websites</string>
    <string name="books">Books</string>
    <string name="age">Age</string>
    <string name="neck_safety">Neck Safety</string>
    <string name="avoid_trampoline_use_under_the_age_of_6_and_under_close_supervision_over_6">Avoid trampoline use under the age of 6 and under close supervision over 6</string>
    <string name="neck_x_ray_only_for_symptomatic_children">Neck x-ray only for symptomatic children</string>
    <string name="may_require_neck_x_ray_for_participation_in_activities_like_special_olympics">May require neck x-ray for participation in activities like Special Olympics</string>
    <string name="symptoms_to_monitor_for">Symptoms to monitor for:</string>
    <string name="neck_pain">- Neck pain</string>
    <string name="back_or_leg_pain">- Back or leg pain</string>
    <string name="weakness">- Weakness</string>
    <string name="muscle_stiffening">- Muscle stiffening</string>
    <string name="changes_in_tone">- Changes in tone</string>
    <string name="gait_changes">- Gait changes</string>
    <string name="changes_in_bowel_or_bladder_function">- Changes in bowel or bladder function</string>
    <string name="open_air_accident">Open Air Accident</string>
    <string name="diaper_leak">Diaper Leak</string>
    <string name="head_circumference">Head Circumference:</string>
    <string name="height">Height:</string>
    <string name="provider">Provider:</string>
    <string name="date">Date:</string>
    <string name="child_s_age">Child\'s Age:</string>
    <string name="enter_provider_s_name">Enter Provider\'s Name</string>
    <string name="visit">visit.</string>
    <string name="this_is_the">This is the</string>
    <string name="ophthamology">Ophthalmology</string>
    <string name="aap_guidelines_for_down_s_syndrome">AAP Guidelines for Down\'s Syndrome</string>
    <string name="calculated_height">Calculated Height</string>
    <string name="calculated_weight">Calculated Weight</string>
    <string name="calculated_head_size">Calculated Head Size</string>
    <string name="list_of_medications">List of Medications</string>
    <string name="vaccine_records">Vaccine Records</string>
    <string name="list_of_allergies">List of Allergies</string>
    <string name="dental">Dental</string>
    <string name="hearing">Hearing</string>
    <string name="speech">Speech</string>
    <string name="physical_therapy">Physical Therapy</string>
    <string name="occupational_therapy">Occupational Therapy</string>
    <string name="doctor_visits">Add Doctor Visit...</string>
    <string name="allergies2">Allergies:</string>
    <string name="vaccines">Vaccines:</string>
    <string name="upload">Upload</string>
    <string name="delete_history">Delete History</string>
    <string name="vaccine_screenshot_text">Please upload pictures of your child\'s current vaccine records</string>
    <string name="medications2">Medications:</string>
    <string name="weight2">Weight:</string>
    <string name="cardio">Cardiology</string>
    <string name="provider_listing">Provider Listings</string>
    <string name="heights">Height</string>
    <string name="weights">Weight</string>
    <string name="circumference">Head Circumference</string>
    <string name="growth_charts">Growth Charts</string>
    <string name="provider_type">Provider Type</string>
    <string name="provider_name">Provider Name</string>
    <string name="appointment_entry">Appointment Entry</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="visit_age">Visit Age</string>
    <string name="click">Click On A Entry To View More Information</string>
    <string name="journal">Journal</string>
    <string name="providers">Providers</string>
    <string name="practice_name">Practice Name</string>
    <string name="specialty">Specialty</string>
    <string name="fax">Fax</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="p_address">Provider Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="past_activities">Past Activities</string>
    <string name="activities">Activities</string>
    <string name="allergy_help_text">use commas to separate multiple entries</string>
    <string name="take_pic">Take Picture</string>
    <string name="choose_pic">Choose a Picture</string>
    <string name="current_record">Current Record</string>
    <string name="AAP_guidelines">AAP Guidelines for Down\'s Syndrome</string>
    <string name="fluid_ate">Fluid Consumed</string>
    <string name="fluid">Liquid</string>
    <string name="title">Title</string>
    <string name="msg">Message:</string>
    <string name="NDSS">National Down Syndrome Society</string>
    <string name="NDSC">National Down Syndrome Congress</string>
    <string name="DSDN">Down Syndrome Diagnosis Network</string>
    <string name="physical">Physical</string>
    <string name="fine_motor">Fine Motor</string>
    <string name="social">Social</string>
    <string name="verbal">Verbal</string>
    <string name="addl_dev_notes">Additional Development notes</string>
    <string name="child_first_rolled_over">Child first rolls over</string>
    <string name="child_first_sitting_up">Child first sits up</string>
    <string name="child_first_crawl">Child first crawls/creeps</string>
    <string name="child_first_standing">Child first pulls to standing</string>
    <string name="child_first_walking_hold_yes">Child first walks holding on</string>
    <string name="child_first_walking_hold_no">Child first walks without holding on</string>
    <string name="child_first_jump">Child first jumps</string>
    <string name="child_first_hold_object">Child first holds object</string>
    <string name="child_first_hands_mouth">Child first hands to mouth</string>
    <string name="child_first_pass_object">Child first passes object between hands</string>
    <string name="child_first_pincer">Child first uses pincer grasp (pick up small object with thumb and pointer finger)</string>
    <string name="child_first_cup">Child first drinks from a cup</string>
    <string name="add">Add</string>
    <string name="your_res">Your Resources</string>
</resources>